(Bugfix) Fixed header's z-index issue

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
     background-color: #211d4f;
-    z-index: 1;
+    z-index: -1;
     .header-navigation {
         padding: 0;
         .navbar-nav {
